Fix alignment issue

--- a/src/scss/level-2/page.scss
+++ b/src/scss/level-2/page.scss
@@ -6,7 +6,7 @@
 
 .page__body {
   display: grid;
-  align-items: center;
+  align-content: center;
   min-height: 100%;
   margin: 0;
   padding: 40px;
